[New Wiki Editor - Fix] Fixed scrollbar over nav

--- a/shuttleofx_client/static_tmp/styles/markdown.less
+++ b/shuttleofx_client/static_tmp/styles/markdown.less
@@ -5,6 +5,10 @@
     //line-height: 16px;
     }
 
+    .CodeMirror-vscrollbar {
+        z-index: 1;
+    }
+
     #in{
     /*
     position: fixed;
@@ -17,6 +21,7 @@
     font-size: 12px;
     box-shadow: -10px 2px 6px 10px rgba(0,0,0,0.4);
     */
+    overflow: auto;
     }
 
     .CodeMirror {
@@ -134,7 +139,9 @@
     padding-left: 10px;
     }
     }
+    */
 
+    /*
     .cm-header-1 { font-size: 2em; }
     .cm-header-2 { font-size: 1.75em; }
     .cm-header-3 { font-size: 1.5em; }
@@ -162,6 +169,7 @@
     p{margin:1em 0;}
 
     img{max-width:100%;}
+
 
     h1,h2,h3,h4,h5,h6{font-weight:normal;color:#111;line-height:1em;}
     h4,h5,h6{ font-weight: bold; }
